src/test/deca/context/invalid/provided/testi11.deca
//Resultats :
//Erreur contextuelle
//Ligne 5: can't use void as a type
class A{
    void set(void x){}
}